--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,3 @@
 # This is an official list of all contributors to this repository
 
-Chesachi Victor Kalu <chesahkalu@gmail.com>
-Reuel Yunana Dangiwa <reueldangiwa@gmail.com>
-~                                             
+Odoch Herbert <odoherb@gmail.com>
